--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,14 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="title" content="Cyber Sanse | Modern Cybersecurity at its Best" />
+  <meta name="description" content="We are committed to making the digital world a safer place. With over a decade of experience in cybersecurity, we leverage cutting-edge technology and a team of experts to deliver tailored solutions. Whether you're a small business or global enterprise, our mission is to secure your valuable digital assets" />
   <link rel="stylesheet" href="css/bower.min.css" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css" />
-  <title></title>
+  <title>CyberSanse</title>
+  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
   <style>
     #toast-container {
       z-index: 999 !important;
